[package]
name = "bevy_daz"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Danny McGee <dannymcgee@gmailcom>"]

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
daz_asset_types = { path = "crates/daz_asset_types", features = ["bevy"] }
regex = "1.10.4"
serde = { workspace = true }
serde_json = { workspace = true }

[workspace]
resolver = "2"
members = [
	"crates/*",
]

[workspace.dependencies]
anyhow = "1.0.75"
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[profile.dev-custom]
inherits = "dev"
opt-level = 1

[profile.dev-custom.package."*"]
opt-level = 3
