[package]
name = "bevy_daz"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Danny McGee <dannymcgee@gmailcom>"]

[workspace]
resolver = "2"
members = [
	"crates/*",
]

[dependencies]
anyhow = { workspace = true }
async-fs = "2.1.1"
bevy = { workspace = true }
daz_asset_types = { path = "crates/daz_asset_types", features = ["bevy"] }
futures-lite = "2.3.0"
merge-streams = "0.1.2"
regex = "1.10.4"
serde = { workspace = true }
serde_json = { workspace = true }

[workspace.dependencies]
anyhow = "1.0.75"
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
bevy-inspector-egui = "0.23.4"
bevy_panorbit_camera = { version = "0.17.0", feature = ["bevy_egui"] }

[[example]]
name = "base_genesis9"
path = "examples/base_genesis9.rs"

[profile.dev-custom]
inherits = "dev"
opt-level = 1

[profile.dev-custom.package."*"]
opt-level = 3
