[package]
name = "daz_asset_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Danny McGee <dannymcgee@gmailcom>"]

[features]
default = []
glam = [
	"dep:glam",
]
bevy = [
	"dep:bevy_math",
	"dep:bevy_render",
]

[dependencies]
anyhow = { workspace = true }
bevy_math = { version = "0.13", optional = true }
bevy_render = { version = "0.13", optional = true }
glam = { version = "0.25", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
paste = "1.0.14"
regex = "1.10.4"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
